@@ -1,15 +1,12 @@
 package bibliotheque.mvc.view;
 
-import bibliotheque.metier.Auteur;
-import bibliotheque.metier.Exemplaire;
-import bibliotheque.metier.Ouvrage;
-import bibliotheque.metier.TypeOuvrage;
-import bibliotheque.mvc.GestionMVC;
+import bibliotheque.metier.*;
 import bibliotheque.mvc.controller.ControllerSpecialOuvrage;
 import bibliotheque.utilitaires.*;
 
 import java.util.*;
 
+import static bibliotheque.mvc.GestionMVC.av;
 import static bibliotheque.utilitaires.Utilitaire.*;
 
 
@@ -20,7 +17,7 @@ public class OuvrageViewConsole extends AbstractView<Ouvrage> {
     @Override
     public void menu() {
         update(controller.getAll());
-        List options = Arrays.asList("ajouter", "retirer", "rechercher", "modifier", "fin");
+        List options = Arrays.asList("ajouter", "retirer", "rechercher","modifier","fin");
         do {
             int ch = choixListe(options);
 
@@ -44,10 +41,10 @@ public class OuvrageViewConsole extends AbstractView<Ouvrage> {
     }
 
     private void retirer() {
-        int nl = choixElt(la) - 1;
+        int nl = choixElt(la)-1;
         Ouvrage a = la.get(nl);
         boolean ok = controller.remove(a);
-        if (ok) affMsg("ouvrage effacé");
+        if(ok) affMsg("ouvrage effacé");
         else affMsg("ouvrage non effacé");
     }
 
@@ -57,85 +54,92 @@ public class OuvrageViewConsole extends AbstractView<Ouvrage> {
 
 
     public void rechercher() {
-        // TODO rechercher ouvrage en demandant type d'ouvrage, puis l'info unique relative à au type recherché
-        TypeOuvrage[] to = TypeOuvrage.values();
-        int c = Utilitaire.choixListe(List.of(to));
-        TypeOuvrage toC = to[c - 1];
-        Ouvrage rech = null;
-        List<Ouvrage> listO = GestionMVC.ov.getAll();
-        switch (toC) {
-            case LIVRE:
-                System.out.println("ISBN : ");
+        TypeOuvrage[] tto = TypeOuvrage.values();
+        List<TypeOuvrage> lto = Arrays.asList(tto);
+        int choix = Utilitaire.choixListe(lto);
+        Ouvrage o=null;
+        switch (choix){
+            case 1 :
+                System.out.print("isbn :");
                 String isbn = sc.nextLine();
+                o=new Livre("",0,null,0,"","",isbn,0, TypeLivre.ROMAN,"");
                 break;
-            case CD:
-                System.out.println("Code CD : ");
-                long codeCD = sc.nextLong();
+
+            case 2 :
+                System.out.print("code :");
+                int codecd = lireInt();
+                o=new CD("",0,null,0,"","",codecd,(byte)0, null);
                 break;
-            case DVD:
-                System.out.println("Code DVD : ");
-                long codeDVD = sc.nextLong();
+            case 3 :
+                System.out.print("code :");
+                int codedvd = lireInt();
+                o=new DVD("",0,null,0,"","",codedvd, null,(byte)0);
                 break;
+
         }
-        if (rech != null) {
-            System.out.println(rech);
-        } else {
-            System.out.println("Aucun ouvrage trouvé");
+        o=controller.search(o);
+        if(o!=null){
+            affMsg(o.toString());
         }
+        else {
+            affMsg("ouvrage inconnu");
+        }
+        //TODO réalisé
 
     }
 
 
     public void modifier() {
         int choix = choixElt(la);
-        Ouvrage a = la.get(choix - 1);
-        do {
+        Ouvrage a = la.get(choix-1);
+         do {
             try {
-                double ploc = Double.parseDouble(modifyIfNotBlank("prix location", "" + a.getPrixLocation()));
+                double ploc =Double.parseDouble(modifyIfNotBlank("prix location",""+a.getPrixLocation()));
                 a.setPrixLocation(ploc);
                 break;
             } catch (Exception e) {
                 System.out.println("erreur :" + e);
             }
-        } while (true);
+        }while(true);
         controller.update(a);
-    }
+   }
 
 
     public void ajouter() {
         TypeOuvrage[] tto = TypeOuvrage.values();
-        List<TypeOuvrage> lto = new ArrayList<>(Arrays.asList(tto));
+        List<TypeOuvrage> lto = Arrays.asList(tto);
         int choix = Utilitaire.choixListe(lto);
-        Ouvrage a = null;
-        List<OuvrageFactory> lof = new ArrayList<>(Arrays.asList(new LivreFactory(), new CDFactory(), new DVDFactory()));
-        a = lof.get(choix - 1).create();
-        //TODO affecter un ou plusieurs auteurs
-        List<Auteur> listA = new ArrayList<>();
-        int c = Utilitaire.choixListe(listA);
-        a.setLauteurs((Set<Auteur>) GestionMVC.av.getAll().get(c - 1));
-        //TODO trier les auteurs présentés par ordre de nom et prénom  ==>  classe anonyme
-        listA.sort(new Comparator<Auteur>() {
-            @Override
-            public int compare(Auteur o1, Auteur o2) {
-                int c = o1.getNom().compareTo(o2.getNom());
-                if (c != 0) {
-                    return c;
-                } else {
-                    return o1.getPrenom().compareTo(o2.getPrenom());
-                }
+        Ouvrage o = null;
+        List<OuvrageFactory> lof = new ArrayList<>(Arrays.asList(new LivreFactory(),new CDFactory(),new DVDFactory()));
+        o = lof.get(choix-1).create();
+        List<Auteur> la= av.getAll();
+        la.sort(new Comparator<Auteur>() {
+                    @Override
+                    public int compare(Auteur o1, Auteur o2) {
+                        if (o1.getNom().equals(o2.getNom())) return o1.getPrenom().compareTo(o2.getPrenom());
+                        return o1.getNom().compareTo(o2.getNom());
+                    }
+                });
+        do {
+            Iterator<Auteur> ita = la.iterator();
+            while (ita.hasNext()) {
+                Auteur a = ita.next();
+                if (o.getLauteurs().contains(a)) ita.remove();
             }
-        });
-        //TODO ne pas présenter les auteurs déjà enregistrés pour cet ouvrage
-        Set<Auteur> listAEnregistrer = a.getLauteurs();
-        listA.removeAll(listAEnregistrer);
-        controller.add(a);
+            int ch = choixListe(la);
+            if (ch == 0) break;
+            o.addAuteur(la.get(ch-1));
+        }while(true);
+
+        //TODO utiliser Lambda
+        controller.add(o);
     }
 
     protected void special() {
-        int choix = choixElt(la);
-        Ouvrage o = la.get(choix - 1);
+        int choix =  choixElt(la);
+        Ouvrage o = la.get(choix-1);
 
-        List options = new ArrayList<>(Arrays.asList("lister exemplaires", "lister exemplaires en location", "lister exemplaires libres", "fin"));
+        List options = new ArrayList<>(Arrays.asList("lister exemplaires", "lister exemplaires en location", "lister exemplaires libres","fin"));
         do {
             int ch = choixListe(options);
 
@@ -151,23 +155,21 @@ public class OuvrageViewConsole extends AbstractView<Ouvrage> {
                     enLocation(o, false);
                     break;
 
-                case 4:
-                    return;
+                case 4 :return;
             }
         } while (true);
 
     }
 
     public void enLocation(Ouvrage o, boolean enLocation) {
-        List<Exemplaire> l = ((ControllerSpecialOuvrage) controller).listerExemplaire(o, enLocation);
+        List<Exemplaire> l= ((ControllerSpecialOuvrage) controller).listerExemplaire(o, enLocation);
         affList(l);
     }
 
     public void exemplaires(Ouvrage o) {
-        List<Exemplaire> l = ((ControllerSpecialOuvrage) controller).listerExemplaire(o);
+        List<Exemplaire> l= ((ControllerSpecialOuvrage)controller).listerExemplaire(o);
         affList(l);
     }
-
     @Override
     public void affList(List la) {
         affListe(la);
